app/assets/stylesheets/application.css.sass
@import susy
@import normalize
@import "compass/typography/vertical_rhythm"
@import "compass/css3"
@import "sassy-buttons"

$base-font-size: 15px
$base-line-height: 18px
@include establish-baseline

$total-columns: 24
$article-columns: 18
$nav-columns: $total-columns - $article-columns

$nav-color: lighten(beige,5%)
$hf-background: lighten(beige,5%)
$article-bg: transparent
$textcolor: dimgrey
$h-font: futura
$article-font: hevletica
$highlight: orange

#content
  @include container

header,footer
  clear: both
  background-color: $hf-background
  border: solid 5px $hf-background
  -webkit-border-radius: 10px
  -moz-border-radius: 10px
  border-radius: 10px
header
  h1,h2
    padding: 0.25em
    margin: 0em 0em 0em 0em
    font-family: $h-font
footer
  text-align: right
  padding: 0.2em
  font-family: $h-font

body
  color: dimgrey  

.selected
  color: $highlight
  a
    color: $highlight !important
    font-weight: bold
    
nav
  @include span-columns($nav-columns, $total-columns)
  margin: 1em 0em 1em 0em
  font-family: $article-font
  background-color: $nav-color
  height: 33em
  overflow: scroll
  border: solid 5px $nav-color
  -webkit-border-radius: 10px
  -moz-border-radius: 10px
  border-radius: 10px
  input[type="search"]
    -webkit-appearance: searchfield
    width: 10em
  a
    color: darken($textcolor,10%)
    padding: 0.5em
  a:hover,active
    color: lighten(red,10%)
    font-weight: bold
  h1,h2,h3
    padding: 0.25em
    margin: 0em
  h2
    border-bottom: 1px solid darkgrey
  h2,h3
    color: $textcolor
    a
      padding: 0.25em
      margin: 0em
      color: $textcolor
      text-decoration: underline !important
  ul,li
    padding: 0em
    margin: 0
    padding-left: 0em
    list-style-type: none
    a
      text-decoration: none
  ul#tab
    @include span-columns(1,$nav-columns)
    list-style-type: none
    li
      text-align: center
      border-left: 1px solid darkgrey
      border-bottom: 1px solid darkgrey
      border-bottom-left-radius: 7px
    a
      font-size: 0.75em
      line-height: 0.5em
      color: lighten($textcolor, 10%)
    a:hover,active
      color: lighten(red,10%)
      font-weight: bold
  ul#entries
    @include span-columns(5 omega,$nav-columns)
    box-sizing: border-box

article
  @include span-columns(17 omega, $total-columns)
  margin: 1em 0em 0em 0em
  background-color: $article-bg
  height: 35em
  overflow: scroll
  color: $textcolor
  h1,h2,h3
    margin-top: 0em
    margin-bottom: 0em
    padding: 0em 0em 0.25em 0em
    font-family: $article-font
  h1
    margin: 1em 0.5em 0.25em 0em
  h2
    padding: 0.25em
  h3
    font-weight: normal
    border-bottom: solid 1px lightgrey
  p
    padding-left: 0em
    padding-right: 1em
    text-align: right
    font-size: 1em
  ul
    line-height: 1.2em
    margin: 0.25em
    padding-left: 1.5em
    list-style-type: none
  a
    text-decoration: underline
    color: $textcolor
  a:hover,active
    color: darkgreen

#notice
  color: green
  font-size: 1.25em
#alert, #error, .field_with_errors
  color: red

// form
.simple_form
  input
    margin: 0.5em
    padding: 0.25em
    border: none
    border-bottom: solid 1px #E5E5E5
    outline: 0
    width: 10em

  textarea
    margin: 0.5em
    padding: 0.25em
    border: none
    border-bottom: solid 1px #E5E5E5
    outline: 0
    width: 10em

  input:hover, textarea:hover, input:focus, textarea:focus
    border: 1px
    border-color: #C9C9C9
    -webkit-box-shadow: wheat 0px 0px 5px

  label
    margin: 0.25em
    padding: 0.2em
    float: left
    text-align: left
    width: 3em
    color: grey

  input[type='submit']
    @include sassy-button-gradient("matte", #617798)
    width: auto
  select
    width: 4em
    padding: 0.2em
    margin: 0.45em // because padding doesn't work for select
    margin-bottom: 0.75em

form.button_to
  margin: 0
  padding: 0
  display: inline
  background-color: transparent
  div
    display: inline
    background-color: transparent
    input
      display: inline
      padding: 0em 0em 0.20em 0em
      margin: 0
      background-color: transparent
      border: none
      font-size: 1.25em
      text-decoration: underline
      color: $textcolor
      a:hover,active
        color: darkgreen

form.button_to:hover
  color: darkgreen
  div
    color: darkgreen
    input
      color: darkgreen


button
  @include sassy-button-gradient("matte", #617798)
  width: auto

table
  align: center
  a
    font-size: 1.25em
    text-decoration: underline
    color: $textcolor
  a:hover,active
    color: darkgreen
  td
    padding: 0.25em

// legend and fieldset
fieldset
  border: 1px solid lightgrey
  border-radius: 0.5em
  margin: 0.5em
legend
  padding: 0.2em 0.5em
  border-radius: 0.5em
  font-family: $article-font
  font-size: 90%
  text-align: right
  display: block
  color: black

